--- a/mobile.css
+++ b/mobile.css
@@ -100,7 +100,7 @@ p {
   margin-bottom: 100px;
 }
 
-#tytul {
+#title {
   font-family: 'Ewert', cursive;
   font-size: 40px;
   text-align: center;
