--- a/mobile.css
+++ b/mobile.css
@@ -130,10 +130,10 @@ p {
 
 #title {
   font-family: 'Ewert', cursive;
-  font-size: 30px;
+  font-size: 26px;
   text-align: left;
   margin-top: 20px;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-bottom: 16px;
   color: gold;
 }
@@ -144,7 +144,13 @@ p {
   height: 48px;
 }
 
-.contact_icon {
+.nav-contact .contact_icon {
+  width: 26px;
+  height: 26px;
+  margin: 0px 4px 0px 4px;
+}
+
+#contact_icons .contact_icon {
   width: 32px;
   height: 32px;
   margin: 8px;
@@ -218,4 +224,9 @@ p {
 .slide > img {
   width: 50px;
   height: 50px;
+}
+
+.nav-contact {
+  float: right;
+  margin-right: 8px;
 }
