--- a/mobile.css
+++ b/mobile.css
@@ -230,3 +230,14 @@ p {
   float: right;
   margin-right: 8px;
 }
+
+#background::after {
+  content: "";
+  background: url("images/coins_background2.gif");
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
