--- a/main.css
+++ b/main.css
@@ -223,3 +223,15 @@ p {
   float: right;
   margin-right: 20px;
 }
+
+
+#background::after {
+  content: "";
+  background: url("images/coins_background2.gif");
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
