--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ body::after {
   bottom: 0;
   right: 0;
   position: absolute;
+  background-attachment: fixed;
   z-index: -1;   
 }
 
@@ -236,6 +237,8 @@ span {
 }
 
 #welcome-text {
+  font-family: 'Gotu', sans-serif;
+  font-size: 18px;
   color: #eeeeee;
   text-align: center;
   margin-top: 20px;
