--- a/mobile.css
+++ b/mobile.css
@@ -32,12 +32,12 @@ h4 {
 html {
   position: relative;
   min-height: 100%;
-  background-color: #222222;
+  background-color: #030303;
 }
 
 body {
   background-color: transparent;
-  border: 1px solid #222222;
+  border: 1px solid #030303;
 }
 
 body::after {
@@ -66,7 +66,7 @@ body::after {
   margin-bottom: 8px;
   border: 0;
   height: 3px;
-  background-image: linear-gradient(to right, rgba(192, 192, 192, 0), rgba(192, 192, 192, 0.75), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to right, rgba(240, 240, 240, 0), rgba(240, 240, 240, 0.75), rgba(0, 0, 0, 0));
 }
 
 #small_separator {
@@ -175,7 +175,6 @@ p {
 
 .contact_icon:hover {
   transform: scale(1.1); 
-  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 
@@ -203,7 +202,7 @@ p {
   }
 }
 .slider {
-  background: #222222;
+  background: transparent;
   height: 50px;
   margin: auto;
   overflow: hidden;
@@ -211,11 +210,11 @@ p {
   width: 320px;
 }
 .slider::before, .slider::after {
-  background: linear-gradient(to right, #222222 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to right, #030303 0%, rgba(0, 0, 0, 0) 100%);
   content: "";
   height: 50px;
   position: absolute;
-  width: 50px;
+  width:100px;
   z-index: 2;
 }
 .slider::after {
