--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ span {
 }
 
 .main {
-  margin-bottom: 300px;
+  margin-bottom: 150px;
 }
 
 #title {
@@ -152,21 +152,41 @@ span {
 .nav-contact {
   float: right;
   margin-right: 20px;
+  width: 260px;
+  height: 70px;
+  margin-right: 50px;
+}
+
+.nav-contact > a {
+  display: inline-block;
+}
+
+.nav-contact > a > img, .nav-contact > a > p {
+  display: inline-block;
 }
 
 #contact_icons {
   margin: auto;
-  width: 208px;
+  width: 206px;
   height: 64px;
+  border: 1px solid green;
 }
 
 .contact_icon {
   width: 32px;
   height: 32px;
-  margin: 16px;
+  margin: 16px 0;
 }
 
-.contact_icon:hover {
+#fb_icon  {
+  margin-left: 10px;
+}
+
+.nav-contact > a:hover {
+  transform: scale(1.02);   
+}
+
+#fb_icon:hover {
   transform: scale(1.06);   
 }
 
@@ -254,4 +274,57 @@ span {
   outline: none; /* Remove outline */
   background-color: transparent; /* Set a background color */
   cursor: pointer; /* Add a mouse pointer on hover */
+}
+
+
+#form_container {
+  width: 400px;
+  height: 400px;
+  margin: 0px auto 50px auto;
+}
+
+#form_container > h3 {
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+/* Style inputs */
+input[type=text] {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+#message {
+  width: 100%;
+  height: 100px;
+  padding: 6px 10px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: none;
+}
+
+/* Style the submit button */
+button[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 7px 10px;
+  margin: 4px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Add a background color to the submit button on mouse-over */
+button[type=submit]:hover {
+  background-color: #45a049;
 }
