--- a/mobile.css
+++ b/mobile.css
@@ -153,30 +153,31 @@ p {
 .nav-contact {
   float: right;
   margin-top: 6px;
-  margin-right: 8px;
+  margin-right: 0px;
+  width: 80;
+  height:58px;
 }
 
-#contact_icons {
-  margin: auto;
-  width: 158px;
-  height: 48px;
+.nav-contact > a {
+  display: inline-block;
 }
+
+.nav-contact > a > img, .nav-contact > a > p {
+  display: inline-block;
+}
+
+#email_address {
+  display: none;
+}
+
+
 
 .nav-contact .contact_icon {
   width: 22px;
   height: 22px;
-  margin: 16px 4px 16px 8px;
+  margin: 16px 8px 16px 8px;
 }
 
-#contact_icons .contact_icon {
-  width: 32px;
-  height: 32px;
-  margin: 8px;
-}
-
-.contact_icon:hover {
-  transform: scale(1.1); 
-}
 
 
 
@@ -260,4 +261,58 @@ p {
   outline: none; /* Remove outline */
   background-color: transparent; /* Set a background color */
   cursor: pointer; /* Add a mouse pointer on hover */
+}
+
+
+
+#form_container {
+  width: 280px;
+  height: 400px;
+  margin: 0px auto 50px auto;
+}
+
+#form_container > h3 {
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+/* Style inputs */
+input[type=text] {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+#message {
+  width: 100%;
+  height: 100px;
+  padding: 6px 10px;
+  margin: 4px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: none;
+}
+
+/* Style the submit button */
+button[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 7px 10px;
+  margin: 4px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Add a background color to the submit button on mouse-over */
+button[type=submit]:hover {
+  background-color: #45a049;
 }
