--- a/main.css
+++ b/main.css
@@ -261,7 +261,8 @@ span {
   font-size: 18px;
   color: #eeeeee;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
+  line-height: 17pt
 }
 
 #topBtn {
