--- a/mobile.css
+++ b/mobile.css
@@ -248,7 +248,8 @@ p {
   font-size: 13px;
   color: #eeeeee;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 30px;
+  line-height: 13pt
 }
 
 #topBtn {
