--- a/mobile.css
+++ b/mobile.css
@@ -136,6 +136,49 @@ p {
   color: #eeeeee;
 }
 
+
+.old_price {
+  text-decoration: line-through;
+  color: #990000;
+}
+
+.new_price {
+  color: green;
+}
+
+#welcome_message {
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+}
+
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-o-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-moz-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+.animate-flicker {
+   -webkit-animation: flickerAnimation 2s infinite;
+   -moz-animation: flickerAnimation 2s infinite;
+   -o-animation: flickerAnimation 2s infinite;
+    animation: flickerAnimation 2s infinite;
+}
+
 .main {
   margin-bottom: 100px;
 }
