--- a/main.css
+++ b/main.css
@@ -127,8 +127,45 @@ p {
   color: #eeeeee;
 }
 
-span {
-  color: gold;
+.old_price {
+  text-decoration: line-through;
+  color: #990000;
+}
+
+.new_price {
+  color: green;
+}
+
+#welcome_message {
+  text-align: center;
+  font-weight: bold;
+}
+
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-o-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-moz-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0.5; }
+  100% { opacity:1; }
+}
+.animate-flicker {
+   -webkit-animation: flickerAnimation 2s infinite;
+   -moz-animation: flickerAnimation 2s infinite;
+   -o-animation: flickerAnimation 2s infinite;
+    animation: flickerAnimation 2s infinite;
 }
 
 .main {
@@ -329,3 +366,5 @@ button[type=submit] {
 button[type=submit]:hover {
   background-color: #45a049;
 }
+
+
